Notebook 01 - If, Elif e Else em Python

--- a/Cap02/Notebooks/01-If-Elif-Else.ipynb
+++ b/Cap02/Notebooks/01-If-Elif-Else.ipynb
@@ -210,6 +210,34 @@
     "    # esse código só será executado se ambas as condições não forem atendidas\n",
     "    print('Você ainda não pode dirigir e nem tirar a CNH!')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Próximo Assunto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [For](./02-For.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assunto do Capítulo Anterior"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Exercícios Cap01](https://github.com/MoisesSantosC/cursoPythonDSA/blob/main/Cap01/Notebooks/07-Exercicios.ipynb)"
+   ]
   }
  ],
  "metadata": {
