Notebook 02 - Arquivos Parte 2

--- a/Cap03/Notebooks/02-Arquivos-Parte2.ipynb
+++ b/Cap03/Notebooks/02-Arquivos-Parte2.ipynb
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4e16b251",
+   "id": "f85c594a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8c1d7ba7",
+   "id": "a508ec51",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "53b2fdb8",
+   "id": "61447ea2",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "105b7198",
+   "id": "69fc1eed",
    "metadata": {},
    "outputs": [
     {
@@ -332,12 +332,264 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5405570a",
+   "metadata": {},
+   "source": [
+    "## Manipulando Arquivos JSON (JavaScript Object Notation)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66022466",
+   "execution_count": 18,
+   "id": "8d7dc6a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# criando um dicionário\n",
+    "dict = {'nome': 'Guido van Rossum',\n",
+    "        'linguagem': 'Python',\n",
+    "        'similar': ['c', 'Modula-3', 'lisp'],\n",
+    "        'users': 1000000}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "260374c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nome Guido van Rossum\n",
+      "linguagem Python\n",
+      "similar ['c', 'Modula-3', 'lisp']\n",
+      "users 1000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# imprimindo cada chave e valor do dicionário\n",
+    "for chave, valor in dict.items():\n",
+    "    print(chave, valor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ac7e22bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importando o módulo JSON\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e0b9a81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"nome\": \"Guido van Rossum\", \"linguagem\": \"Python\", \"similar\": [\"c\", \"Modula-3\", \"lisp\"], \"users\": 1000000}'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# convertendo o dicionário para um objeto json\n",
+    "json.dumps(dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "cbf598ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# criando um arquivo json\n",
+    "with open('arquivos/dados.json', 'w') as arquivo:\n",
+    "    arquivo.write(json.dumps(dict))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "181be11a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# abrindo o arquivo em modo leitura\n",
+    "with open('arquivos/dados.json', 'r', encoding='utf-8') as arquivo:\n",
+    "    texto = arquivo.read()\n",
+    "    data = json.loads(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ba619e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'Guido van Rossum', 'linguagem': 'Python', 'similar': ['c', 'Modula-3', 'lisp'], 'users': 1000000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8c1eff34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guido van Rossum\n"
+     ]
+    }
+   ],
+   "source": [
+    "# acessando uma chave do arquivo\n",
+    "print(data['nome'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "024e7de6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importando um arquivo json copiado da internet\n",
+    "from urllib.request import urlopen\n",
+    "\n",
+    "response = urlopen(\"http://vimeo.com/api/v2/video/57733101.json\").read().decode('utf8')\n",
+    "data = json.loads(response)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c976b06a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Título: The Good Man trailer\n",
+      "URL: https://vimeo.com/57733101\n",
+      "Duração: 143\n",
+      "Número de visualizações: 6264\n"
+     ]
+    }
+   ],
+   "source": [
+    "# extraindo e imprimindo os elementos do arquivo\n",
+    "print('Título:', data['title'])\n",
+    "print('URL:', data['url'])\n",
+    "print('Duração:', data['duration'])\n",
+    "print('Número de visualizações:', data['stats_number_of_plays'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0ae104bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# copiando o conteúdo de um arquivo para outro\n",
+    "import os\n",
+    "\n",
+    "arquivo_fonte = 'arquivos/dados.json'\n",
+    "arquivo_destino = 'arquivos/json_data.txt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "7eeb99b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# método 1\n",
+    "with open(arquivo_fonte, 'r') as infile:\n",
+    "    text = infile.read()\n",
+    "    with open(arquivo_destino, 'w') as outfile:\n",
+    "        outfile.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "07864878",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "107"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# método 2\n",
+    "open(arquivo_destino, 'w').write(open(arquivo_fonte,'r').read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5d585fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# leitura de arquivos json\n",
+    "with open('arquivos/json_data.txt', 'r') as arquivo:\n",
+    "    texto = arquivo.read()\n",
+    "    data = json.loads(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5f1c75f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nome': 'Guido van Rossum', 'linguagem': 'Python', 'similar': ['c', 'Modula-3', 'lisp'], 'users': 1000000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
+   ]
   }
  ],
  "metadata": {
