Notebook 12 - Exercício 02 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3d01e9ce",
+   "id": "273b719d",
    "metadata": {},
    "source": [
     "<h1 align=\"center\">Exercícios</h1>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5da1c6",
+   "id": "c9fec3ce",
    "metadata": {},
    "source": [
     "## Exercício 01"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8842b694",
+   "id": "3f7aaacc",
    "metadata": {},
    "source": [
     "Crie uma lista de 3 elementos e calcule a terceira potência de cada elemento."
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "79cd99e6",
+   "id": "73c5acb2",
    "metadata": {},
    "outputs": [
     {
@@ -50,9 +50,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "927a7e04",
+   "metadata": {},
+   "source": [
+    "## Exercício 02"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ee31e7b",
+   "metadata": {},
+   "source": [
+    "Reescreva o código abaixo, usando a função map(). O resultado final deve ser o mesmo!\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "70a09d4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'a', 1]\n",
+      "['DATA', 'data', 4]\n",
+      "['SCIENCE', 'science', 7]\n",
+      "['ACADEMY', 'academy', 7]\n",
+      "['OFERCE', 'oferce', 6]\n",
+      "['OS', 'os', 2]\n",
+      "['MELHORES', 'melhores', 8]\n",
+      "['CURSOS', 'cursos', 6]\n",
+      "['DE', 'de', 2]\n",
+      "['ANÁLISE', 'análise', 7]\n",
+      "['DE', 'de', 2]\n",
+      "['DADOS', 'dados', 5]\n",
+      "['DO', 'do', 2]\n",
+      "['BRASIL', 'brasil', 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Código do exercício\n",
+    "palavras = 'A Data Science Academy oferce os melhores cursos de análise de dados do Brasil'.split()\n",
+    "resultado = [[w.upper(), w.lower(), len(w)] for w in palavras]\n",
+    "for i in resultado:\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "96a199ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A', 'a', 1),\n",
+       " ('DATA', 'data', 4),\n",
+       " ('SCIENCE', 'science', 7),\n",
+       " ('ACADEMY', 'academy', 7),\n",
+       " ('OFERCE', 'oferce', 6),\n",
+       " ('OS', 'os', 2),\n",
+       " ('MELHORES', 'melhores', 8),\n",
+       " ('CURSOS', 'cursos', 6),\n",
+       " ('DE', 'de', 2),\n",
+       " ('ANÁLISE', 'análise', 7),\n",
+       " ('DE', 'de', 2),\n",
+       " ('DADOS', 'dados', 5),\n",
+       " ('DO', 'do', 2),\n",
+       " ('BRASIL', 'brasil', 6)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Exercício Resolvido\n",
+    "palavras = 'A Data Science Academy oferce os melhores cursos de análise de dados do Brasil'.split()\n",
+    "\n",
+    "# criando a função\n",
+    "def t(x):\n",
+    "    return x.upper(), x.lower(), len(x)\n",
+    "\n",
+    "# aplicando a função em cada item da lista\n",
+    "list(map(t, palavras))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77d2a88",
+   "id": "f816305f",
    "metadata": {},
    "outputs": [],
    "source": []
