Notebook 12 - Exercício 03 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "273b719d",
+   "id": "b991fc56",
    "metadata": {},
    "source": [
     "<h1 align=\"center\">Exercícios</h1>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9fec3ce",
+   "id": "f4e775e2",
    "metadata": {},
    "source": [
     "## Exercício 01"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f7aaacc",
+   "id": "0e8311d5",
    "metadata": {},
    "source": [
     "Crie uma lista de 3 elementos e calcule a terceira potência de cada elemento."
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73c5acb2",
+   "id": "4b59c22a",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "927a7e04",
+   "id": "5f3f7c08",
    "metadata": {},
    "source": [
     "## Exercício 02"
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ee31e7b",
+   "id": "374e3c5f",
    "metadata": {},
    "source": [
     "Reescreva o código abaixo, usando a função map(). O resultado final deve ser o mesmo!\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "70a09d4d",
+   "id": "13d0d27a",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "96a199ca",
+   "id": "0cdd580c",
    "metadata": {},
    "outputs": [
     {
@@ -144,9 +144,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e0c5b5b",
+   "metadata": {},
+   "source": [
+    "## Exercício 03"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fb235ae",
+   "metadata": {},
+   "source": [
+    "Calcule a matriz transposta da matriz abaixo.<br>\n",
+    "Caso não saiba o que é matriz transposta, visite este link: https://pt.wikipedia.org/wiki/Matriz_transposta<br>\n",
+    "Matriz transposta é um conceito fundamental na construção de redes neurais artificiais, base de sistemas de IA.<br>\n",
+    "`matrix = [[1, 2],[3,4],[5,6],[7,8]]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "baeca1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 3, 5, 7], [2, 4, 6, 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz = [[1, 2],[3,4],[5,6],[7,8]]\n",
+    "transposta = [[linha[i] for linha in matriz] for i in range(2)]\n",
+    "\n",
+    "print(transposta)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f816305f",
+   "id": "31b06889",
    "metadata": {},
    "outputs": [],
    "source": []
