Notebook 12 - Exercício 04 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -184,9 +184,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "142b7dca",
+   "metadata": {},
+   "source": [
+    "## Exercício 04"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1f2b1f6",
+   "metadata": {},
+   "source": [
+    "Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo.<br>\n",
+    "Aplique as duas funções aos elementos da lista abaixo.<br>\n",
+    "Obs: As duas funções devem ser aplicadas simultaneamente.<br>\n",
+    "`lista = [0, 1, 2, 3, 4]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ffaca31a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0]\n",
+      "[1, 1]\n",
+      "[4, 8]\n",
+      "[9, 27]\n",
+      "[16, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# criando a lista\n",
+    "lista = [0, 1, 2, 3, 4]\n",
+    "\n",
+    "# função para elevar ao quadrado\n",
+    "def quadrado(x):\n",
+    "    return x**2\n",
+    "\n",
+    "# função para elevar ao cubo\n",
+    "def cubo(x):\n",
+    "    return x**3\n",
+    "\n",
+    "# List Comprehension\n",
+    "resultado = [[quadrado(i), cubo(i)] for i in lista]\n",
+    "\n",
+    "# loop para mostrar o resultado\n",
+    "for r in resultado:\n",
+    "    print(r)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b06889",
+   "id": "e486766f",
    "metadata": {},
    "outputs": [],
    "source": []
