Notebook 12 - Exercício 05 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "142b7dca",
+   "id": "eb79670e",
    "metadata": {},
    "source": [
     "## Exercício 04"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f2b1f6",
+   "id": "f3f46552",
    "metadata": {},
    "source": [
     "Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo.<br>\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ffaca31a",
+   "id": "10142f11",
    "metadata": {},
    "outputs": [
     {
@@ -241,9 +241,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "794f81c6",
+   "metadata": {},
+   "source": [
+    "## Exercício 05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d17a134b",
+   "metadata": {},
+   "source": [
+    "Abaixo você encontra duas listas. Faça com que cada elemento da listaA seja elevado<br>\n",
+    "ao elemento correspondente na listaB.<br>\n",
+    "`listaA = [2, 3, 4]`<br>\n",
+    "`listaB = [10, 11, 12]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d2bf6452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1024, 177147, 16777216]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# criando duas listas\n",
+    "listaA = [2, 3, 4]\n",
+    "listaB = [10, 11, 12]\n",
+    "\n",
+    "# elevando cada elemento da listaA pela listaB\n",
+    "list(map(pow, listaA, listaB))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e486766f",
+   "id": "6b602660",
    "metadata": {},
    "outputs": [],
    "source": []
