--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb79670e",
+   "id": "62010243",
    "metadata": {},
    "source": [
     "## Exercício 04"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f46552",
+   "id": "02ac20f2",
    "metadata": {},
    "source": [
     "Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo.<br>\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "10142f11",
+   "id": "e6184bc6",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794f81c6",
+   "id": "a0f5d848",
    "metadata": {},
    "source": [
     "## Exercício 05"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d17a134b",
+   "id": "9548a99c",
    "metadata": {},
    "source": [
     "Abaixo você encontra duas listas. Faça com que cada elemento da listaA seja elevado<br>\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d2bf6452",
+   "id": "4376a3ed",
    "metadata": {},
    "outputs": [
     {
@@ -286,9 +286,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9df2da85",
+   "metadata": {},
+   "source": [
+    "## Exercício 06"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d50ebff",
+   "metadata": {},
+   "source": [
+    "Considerando o range de valores abaixo.<br>\n",
+    "Use a função `filter()` para retornar apenas os valores negativos.<br>\n",
+    "`range(-5, 5)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "77bbc077",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-5, -4, -3, -2, -1]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filtrando somente valores negativos do range\n",
+    "list(filter(lambda x: x < 0, range(-5, 5)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b602660",
+   "id": "b2df500f",
    "metadata": {},
    "outputs": [],
    "source": []
