Notebook 12 - Exercício 07 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62010243",
+   "id": "7f6712f1",
    "metadata": {},
    "source": [
     "## Exercício 04"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02ac20f2",
+   "id": "8dd3b6ed",
    "metadata": {},
    "source": [
     "Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo.<br>\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e6184bc6",
+   "id": "87044349",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f5d848",
+   "id": "29c572d1",
    "metadata": {},
    "source": [
     "## Exercício 05"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9548a99c",
+   "id": "16acca71",
    "metadata": {},
    "source": [
     "Abaixo você encontra duas listas. Faça com que cada elemento da listaA seja elevado<br>\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4376a3ed",
+   "id": "7e0eff63",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df2da85",
+   "id": "70461a04",
    "metadata": {},
    "source": [
     "## Exercício 06"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d50ebff",
+   "id": "8b8fde7d",
    "metadata": {},
    "source": [
     "Considerando o range de valores abaixo.<br>\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "77bbc077",
+   "id": "96f3b702",
    "metadata": {},
    "outputs": [
     {
@@ -326,9 +326,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac89607f",
+   "metadata": {},
+   "source": [
+    "## Exercício 07"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449734b3",
+   "metadata": {},
+   "source": [
+    "Usando a função `filter()`,<br>\n",
+    "encontre os valores que são comuns às duas listas abaixo.<br>\n",
+    "`a = [1, 2, 3, 5, 7, 9]`<br>\n",
+    "`b = [2, 3, 5, 6, 7, 8]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0a49bfb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# criando as duas listas\n",
+    "a = [1, 2, 3, 5, 7, 9]\n",
+    "b = [2, 3, 5, 6, 7, 8]\n",
+    "\n",
+    "list(filter((lambda x: x in a), b))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2df500f",
+   "id": "29e04c9c",
    "metadata": {},
    "outputs": [],
    "source": []
