Notebook 12 - Exercício 08 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6712f1",
+   "id": "fd855038",
    "metadata": {},
    "source": [
     "## Exercício 04"
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dd3b6ed",
+   "id": "72495cf0",
    "metadata": {},
    "source": [
     "Crie duas funções, uma para elevar um número ao quadrado e outra para elevar ao cubo.<br>\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "87044349",
+   "id": "956f2dde",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c572d1",
+   "id": "df39a723",
    "metadata": {},
    "source": [
     "## Exercício 05"
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16acca71",
+   "id": "1bdccfb4",
    "metadata": {},
    "source": [
     "Abaixo você encontra duas listas. Faça com que cada elemento da listaA seja elevado<br>\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7e0eff63",
+   "id": "99dc92b4",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70461a04",
+   "id": "e2df5841",
    "metadata": {},
    "source": [
     "## Exercício 06"
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b8fde7d",
+   "id": "71679f39",
    "metadata": {},
    "source": [
     "Considerando o range de valores abaixo.<br>\n",
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "96f3b702",
+   "id": "2ae3d787",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac89607f",
+   "id": "49cb728f",
    "metadata": {},
    "source": [
     "## Exercício 07"
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "449734b3",
+   "id": "278a7642",
    "metadata": {},
    "source": [
     "Usando a função `filter()`,<br>\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a49bfb0",
+   "id": "ca71395a",
    "metadata": {},
    "outputs": [
     {
@@ -370,9 +370,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6271a175",
+   "metadata": {},
+   "source": [
+    "## Exercício 08"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ade1946",
+   "metadata": {},
+   "source": [
+    "Considere o código abaixo. Obtenha o mesmo resultado usando o pacote time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "37d7d947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17/10/2021 05:51\n"
+     ]
+    }
+   ],
+   "source": [
+    "# resultado esperado\n",
+    "import datetime\n",
+    "print(datetime.datetime.now().strftime(\"%d/%m/%Y %H:%M\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b766b927",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'17/10/2021 05:59'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# resultado do exercício\n",
+    "import time\n",
+    "\n",
+    "time.strftime(\"%d/%m/%Y %H:%M\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29e04c9c",
+   "id": "40212128",
    "metadata": {},
    "outputs": [],
    "source": []
