Notebook 12 - Exercício 08 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "37d7d947",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17/10/2021 05:51\n"
+      "17/10/2021 06:05\n"
      ]
     }
    ],
@@ -407,32 +407,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "b766b927",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'17/10/2021 05:59'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17/10/2021 06:05\n"
+     ]
     }
    ],
    "source": [
     "# resultado do exercício\n",
     "import time\n",
     "\n",
-    "time.strftime(\"%d/%m/%Y %H:%M\")"
+    "print(time.strftime(\"%d/%m/%Y %H:%M\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40212128",
+   "id": "6582cbfd",
    "metadata": {},
    "outputs": [],
    "source": []
