--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -395,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17/10/2021 06:05\n"
+      "18/10/2021 06:17\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17/10/2021 06:05\n"
+      "18/10/2021 06:17\n"
      ]
     }
    ],
@@ -427,9 +427,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1304d398",
+   "metadata": {},
+   "source": [
+    "## Exercício 09"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d85568a1",
+   "metadata": {},
+   "source": [
+    "Considere os dois dicionários abaixo.<br>\n",
+    "Crie um terceiro dicionário com as chaves<br>\n",
+    "do dicionário 1 e os valores do dicionário 2.<br>\n",
+    "`dict1 = {'a':1, 'b':2}`<br>\n",
+    "`dict2 = {'c':4, 'd':5}`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f105661d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 4, 'b': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# criando os dicionários\n",
+    "dict1 = {'a':1, 'b':2}\n",
+    "dict2 = {'c':4, 'd':5}\n",
+    "\n",
+    "def trocandoValores(d1, d2):\n",
+    "    dicTemp = {}\n",
+    "    \n",
+    "    for d1Key, d2Val in zip(d1, d2.values()):\n",
+    "        dicTemp[d1Key] = d2Val\n",
+    "        \n",
+    "    return dicTemp\n",
+    "\n",
+    "dict3 = trocandoValores(dict1, dict2)\n",
+    "print(dict3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6582cbfd",
+   "id": "1690eaa3",
    "metadata": {},
    "outputs": [],
    "source": []
