Notebook 12 - Exercício 10 resolvido

--- a/Cap03/Notebooks/12-Exercicios.ipynb
+++ b/Cap03/Notebooks/12-Exercicios.ipynb
@@ -395,7 +395,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/10/2021 06:17\n"
+      "18/10/2021 06:26\n"
      ]
     }
    ],
@@ -415,7 +415,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18/10/2021 06:17\n"
+      "18/10/2021 06:26\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1304d398",
+   "id": "59ffa7a0",
    "metadata": {},
    "source": [
     "## Exercício 09"
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85568a1",
+   "id": "bfead3fc",
    "metadata": {},
    "source": [
     "Considere os dois dicionários abaixo.<br>\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f105661d",
+   "id": "4eea4850",
    "metadata": {},
    "outputs": [
     {
@@ -478,12 +478,47 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1690eaa3",
+   "cell_type": "markdown",
+   "id": "c31155ca",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "\n",
+    "## Exercício 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e47a6175",
+   "metadata": {},
+   "source": [
+    "Considere a lista abaixo e retorne apenas os elementos cujo índice for maior que 5.<br>\n",
+    "`lista = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "336b4a0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g\n",
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "# criando a lista\n",
+    "lista = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']\n",
+    "\n",
+    "for i, valor in enumerate(lista):\n",
+    "    if i > 5:\n",
+    "        print(valor)\n"
+   ]
   }
  ],
  "metadata": {
